# projectstructure

./: .gitignore  .projectstructureignore  Cargo.toml  README.md  install.sh  projectstructure.toml  setup.sh
src/: config.rs  main.rs  projectstructure.toml  save.rs  scan.rs  update.rs
test/: .env  Cargo.toml
